--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <td><button id="num" class="btn btn-light"onclick="press (7)">7</button></td>
                     <td><button id="num" class="btn btn-light" onclick="press (8)">8</button></td>
                     <td><button id="num" class="btn btn-light"onclick="press (9)">9</button></td>
-                    <td rowspan="4" ><button class="btn btn-primary" id="btn2" onclick=()>=</button></td>
+                    <td rowspan="4" ><button class="btn btn-primary" id="btn2" onclick=equalDis()>=</button></td>
                 </tr>
                 <tr>
                     <td><button id="num" class="btn btn-light"onclick="press (4)">4</button></td>
@@ -51,6 +51,7 @@
                 </tr>
             </table>
 
+lo
         </div>
     </center>
 
